# spotify-data-pipeline

./: .coverage  .dockerignor  .gitignore  Dockerfile  Knowledge_base.txt  pyproject.toml  pytest.ini  readme.md  readme.txt  requirements.txt
.github/workflows/: main.yml  main_spotify-data-pipeline.yml
azure_function/: function_app.py  requirements.txt
data/: warehouse.duckdb
spotify_data_pipeline/: analyze_gold.py  bronze_helper.py  error_handler.py  fill_bronze.py  fill_gold.py  fill_silver.py  fill_silver_recent_tracks.py  fill_silver_top_artists.py  get_last_played.py  get_recent_tracks.py  get_top_artists.py  get_top_tracks.py  main.py  reset_warehouse.py  setup_warehouse.py
spotify_data_pipeline.egg-info/: PKG-INFO  SOURCES.txt
spotify_data_pipeline/Analytics/: analyze_gold.py
spotify_data_pipeline/Bronze/: auth.py  auth_bootstrap.py  error_handler.py  fill_bronze.py  get_recent_tracks.py  get_top_artists.py  get_top_tracks.py  migrate_old_data.py
spotify_data_pipeline/Gold/: fill_gold.py
spotify_data_pipeline/Silver/: fill_silver.py  fill_silver_recent_tracks.py  fill_silver_top_artists.py  fill_silver_top_tracks.py
spotify_data_pipeline/ddl/: populate_warehouse.py  reset_warehouse.sql  warehouse.sql
tests/: test_artist_helper.py  test_auth.py  test_bronze_helper.py  test_error_handler_handle_http_error.py  test_error_handler_request_with_retry.py  test_file_utils.py  test_fill_bronze.py  test_get_last_played.py  test_get_top_artists.py  test_get_top_tracks.py  test_gold_helper.py  test_track_helper.py  test_write_bronze_batch.py
(+61 files in other folders)
